--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/base": "^5.0.0-beta.40",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^0.21.1",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
@@ -17,7 +19,8 @@
     "react-router-dom": "^5.3.4",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.3.0"
+    "redux-saga": "^1.3.0",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
